# ChangeLog for sys-apps/calculate-desktop
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-desktop-2.2.9999 (26 May 2010)

  26 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-desktop-2.2.9999.ebuild, +metadata.xml:
  Ebuild for live version of calculate-desktop.
