@@ -1,3 +1,3 @@
-EBUILD calculate-desktop-2.2.9999.ebuild 468 RMD160 ee6d69f75b5e0a82e70ffa42d980970b9298bd7a SHA1 215b9dec50ae48284d782eb40ed9c0fa263b3bb4 SHA256 206e54e5ce0d4b9827382c33031a35d588d4d6eb4eb7b030ccaedf75cdfd606d
-MISC ChangeLog 332 RMD160 a061769ab4b0e41cbd331092770004c1f4aeb100 SHA1 23600311c04aa6b90adfa22315a1a1af15698e77 SHA256 b7d0f5c01d2ca2e7a7c6930554a323660c08226d2f93b386dda96ecfd03a4322
+EBUILD calculate-desktop-2.2.9999.ebuild 989 RMD160 5529761fc4152ecb11ca8c5f428c36e308d077ea SHA1 5a2f1da5b3be5ec2fd19c9a88307aeef86626cd0 SHA256 e9669ff39b6f88d9b9014aba42152f37ff9db62c27e8e387e069604e79f381b7
+MISC ChangeLog 511 RMD160 f937e03fd8e36da501f295c84902d5198abf2eae SHA1 b112b1639d73f04968914b11f68824997b40d3c1 SHA256 623b140d091171c31304cd959112f0babb73f9736cb979c47615b6c4e194c73c
 MISC metadata.xml 315 RMD160 36a1a8d03aed0a483def83e076f484a64d452a8b SHA1 f6e70641eab777d2417d8a7600e8d3f09f53f96f SHA256 67fea0b1af7d10c0f86e72ab40f527e99c6f81f7aace4716344bdfb97c769a18
