@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-desktop-2.2.9999.ebuild:
+  Added install and uninstall command running at postinstall and postrm
+  stage.
+
 *calculate-desktop-2.2.9999 (26 May 2010)
 
   26 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
